<resources>
    <string name="app_name" translatable="false">Whatsapp-Concept</string>
    <string name="logo_app_green_content_description">Logo App Green</string>
    <string name="insert_your_email_hint">Insert your e-mail</string>
    <string name="insert_your_password_hint">Insert your password</string>
    <string name="not_have_account_text">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_text" translatable="false">Login</string>
    <string name="insert_your_name_hint">Insert your name</string>
    <string name="empty_name">Name cannot be empty.</string>
    <string name="empty_email">Email cannot be empty.</string>
    <string name="empty_password">Password cannot be empty.</string>
    <string name="success_to_sign_up">Success to sign up</string>
    <string name="error_to_sign_up">Error on sign Up</string>
    <string name="user_logged_successfully">User logged successfully!</string>
    <string name="user_not_logged">Error on login user</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Do you really want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="chats" translatable="false">CHATS</string>
    <string name="contacts">CONTACTS</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile_photo_content_description">Update profile photo</string>
    <string name="requesting_gallery_permission">You must grant gallery permission to continue.</string>
    <string name="image_not_selected">No images selected</string>
    <string name="error_uploading_image">Error on upload image</string>
    <string name="image_uploaded">Success on upload image</string>
    <string name="profile_updated">Success on upload profile</string>
    <string name="error_updating_profile">Error on upload profile</string>
    <string name="error_getting_profile">Error on get profile</string>
    <string name="user_name_placeholder" translatable="false">User Name</string>
    <string name="recycler_view_contacts_content_description">List of contacts</string>
    <string name="error_getting_contacts">Error getting contacts</string>
    <string name="send_message_fab_content_description">Send message</string>
    <string name="list_of_messages_recycler_view_content_description">List of messages</string>
    <string name="enter_your_message_hint">Enter your message</string>
    <string name="error_send_message">Error on send message</string>
    <string name="error_get_messages">Error on get messages</string>
    <string name="chat_message_place_holder" translatable="false">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit.</string>
    <string name="error_get_chat">Error on get chat</string>
    <string name="last_message_place_holder" translatable="false">Last Message</string>
    <string name="list_of_chats_content_description">List of chats</string>
</resources>